2003-04-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: Avoid rules with no lines. Don't use the force target.
	Suggested by Jouk Jansen <joukj@hrem.stm.tudelft.nl>.

2003-04-06  Bruno Haible  <bruno@clisp.org>

	* lang-c++: Update includes list to match the changed location of
	autosprintf.h.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: New file.
	* Makefile.am (EXTRA_DIST): Add Makefile.vms.

2003-03-17  Bruno Haible  <bruno@clisp.org>

	Native Woe32/MSVC support.
	* Makefile.msvc: New file.
	* Makefile.am (EXTRA_DIST): Add it.
	(INCLUDES): Look for libgnuintl.h in ../intl, not
	$(top_srcdir)/../gettext-runtime/intl.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	Support for relocatable installation.
	* tstgettext.c: Include progname.h, relocatable.h.
	(program_name): Remove variable.
	(main): Use set_program_name. Relocate LOCALEDIR value. Update
	copyright year.
	* tstngettext.c: Include progname.h, relocatable.h.
	(program_name): Remove variable.
	(main): Use set_program_name. Relocate LOCALEDIR value. Update
	copyright year.
	* Makefile.am (tstgettext_CFLAGS, tstngettext_CFLAGS): New variables.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (localedir): New variable.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	* xgettext-19: Add Report-Msgid-Bugs-To line to expected result.
	* xgettext-20: Likewise.

2003-02-23  Bruno Haible  <bruno@clisp.org>

	* format-lisp-1: Correct the syntax of a test string.

2003-02-22  Bruno Haible  <bruno@clisp.org>

	* lang-python-1: Renamed from lang-python. Make it work with Python
	2.3.
	* lang-python-2: New file.
	* Makefile.am (TESTS): Remove lang-python, add lang-python-[12].

2003-02-20  Bruno Haible  <bruno@clisp.org>

	* msgfilter-1: Remove SKIP: messages, now emitted by the Makefile.
	* msgfilter-2: Likewise.
	* msgunfmt-2: Likewise.
	* msgunfmt-3: Likewise.
	* xgettext-19: Likewise.
	* xgettext-20: Likewise.
	* lang-c: Likewise.
	* lang-c++: Likewise.
	* lang-clisp: Likewise.